force-app/main/default/objects/AH_Project_Backlog_Workstreams__c/AH_Project_Backlog_Workstreams__c.object-meta.xml
<CustomObject>
    <label>Project Backlog Workstream</label>
    <nameField>
        <displayFormat>PBW-{00000}</displayFormat>
        <label>Project Backlog Workstreams Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Backlog Workstreams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>