force-app/main/default/objects/AH_Project_Backlog_Workstreams__c/fields/Estimated_Total_Cost_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_Cost_Reduction__c</fullName>
    <description>NICC-047197</description>
    <formula>First_Year_Cost_Reduction__c * 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>First Year Cost Reduction multiplied by 3. The total benefit is over 3 years</inlineHelpText>
    <label>Estimated Total Cost Reduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>