force-app/main/default/objects/AH_Project_Backlog_Workstreams__c/fields/Estimated_Total_Efficiencies_Cost_Saved__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_Efficiencies_Cost_Saved__c</fullName>
    <description>NICC-047197
THIS IS A CONFIDENTIAL FIELD.  DO NOT MAKE VISIBLE TO ANY PROFILES OR PERMISSION SETS</description>
    <formula>First_Year_Efficiencies_Savings_Cost__c * 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>First Year Efficiencies Savings Cost multiplied by 3. Total efficiencies cost savings over 3 years</inlineHelpText>
    <label>Estimated Total Efficiencies Cost Saved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>