force-app/main/default/objects/AH_Project_Backlog_Workstreams__c/fields/First_Year_Cost_Reduction__c.field-meta.xml
<CustomField>
    <fullName>First_Year_Cost_Reduction__c</fullName>
    <label>First Year Cost Reduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>