force-app/main/default/objects/AH_Project_Backlog_Workstreams__c/fields/First_Year_Efficiencies_Savings_Cost__c.field-meta.xml
<CustomField>
    <fullName>First_Year_Efficiencies_Savings_Cost__c</fullName>
    <formula>First_Year_Efficiencies_Savings_hrs__c *  Hourly_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Year Efficiencies Savings Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>