force-app/main/default/objects/AH_Project_Backlog_Workstreams__c/fields/First_Year_Efficiencies_Savings_hrs__c.field-meta.xml
<CustomField>
    <fullName>First_Year_Efficiencies_Savings_hrs__c</fullName>
    <label>First Year Efficiencies Savings (hrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>