force-app/main/default/objects/AH_Project_Backlog_Workstreams__c/fields/First_Yr_Efficiencies_Saving_Cost_Weight__c.field-meta.xml
<CustomField>
    <fullName>First_Yr_Efficiencies_Saving_Cost_Weight__c</fullName>
    <formula>First_Year_Efficiencies_Savings_Cost__c *  Annual_Efficiencies_Savings_Confidence__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Yr Efficiencies Saving Cost Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>