force-app/main/default/objects/AH_Project_Backlog_Workstreams__c/fields/Hourly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Cost__c</fullName>
    <description>Hourly cost for this workstream</description>
    <label>Hourly Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>