force-app/main/default/objects/AH_Project_Backlog_Workstreams__c/fields/NI_Project_Backlog__c.field-meta.xml
<CustomField>
    <fullName>NI_Project_Backlog__c</fullName>
    <label>NI Project Backlog</label>
    <referenceTo>NI_Project_Backlog__c</referenceTo>
    <relationshipLabel>Project Backlog Workstreams</relationshipLabel>
    <relationshipName>Project_Backlog_Workstreams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>