force-app/main/default/objects/AH_Project_Backlog_Workstreams__c/fields/This_Project_Will_Increase_Efficiences__c.field-meta.xml
<CustomField>
    <fullName>This_Project_Will_Increase_Efficiences__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-047197</description>
    <inlineHelpText>Indicates whether or not the project will increase efficiencies for this workstream</inlineHelpText>
    <label>This Project Will Increase Efficiencies</label>
    <type>Checkbox</type>
</CustomField>