force-app/main/default/objects/AH_Project_Backlog_Workstreams__c/fields/This_Project_Will_Reduce_Costs__c.field-meta.xml
<CustomField>
    <fullName>This_Project_Will_Reduce_Costs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-047197</description>
    <inlineHelpText>Indicates whether or not this project will reduce costs for this workstream</inlineHelpText>
    <label>This Project Will Reduce Costs</label>
    <type>Checkbox</type>
</CustomField>