force-app/main/default/objects/AH_Project_Backlog_Workstreams__c/fields/Workstream__c.field-meta.xml
<CustomField>
    <fullName>Workstream__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Id , 
 TEXT(Workstream_Name__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workstream</label>
    <type>Text</type>
</CustomField>