force-app/main/default/objects/AH_Project_Backlog_Workstreams__c/fields/Workstream_Name__c.field-meta.xml
<CustomField>
    <fullName>Workstream_Name__c</fullName>
    <label>Workstream Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Amadeus_Hospitality_Workstreams</valueSetName>
    </valueSet>
</CustomField>