force-app/main/default/objects/AH_Project_Backlog_Workstreams__c/validationRules/Benefits_Cannot_Be_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Benefits_Cannot_Be_Zero</fullName>
    <active>true</active>
    <description>NICC-047851
Benefits cannot be zero</description>
    <errorConditionFormula>(
ISBLANK(Estimated_Annual_Cost_Reduction__c)
||
Estimated_Annual_Cost_Reduction__c = 0
)
&amp;&amp;
(
ISBLANK(Annual_Efficiencies_Savings_hrs__c)
||
Annual_Efficiencies_Savings_hrs__c = 0
)</errorConditionFormula>
    <errorMessage>You must enter a value greater than 0 for your benefits</errorMessage>
</ValidationRule>