force-app/main/default/objects/AH_Project_Backlog_Workstreams__c/validationRules/Benefits_Confidence_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Benefits_Confidence_Greater_Than_Zero</fullName>
    <active>true</active>
    <description>NICC-047851

You must enter a value greater than 0 for the confidence percentages</description>
    <errorConditionFormula>(
Estimated_Annual_Cost_Reduction__c &gt; 0
&amp;&amp;
(
ISBLANK(Annual_Cost_Reduction_Confidence__c)
||
Annual_Cost_Reduction_Confidence__c = 0
)
)
||
(
Annual_Efficiencies_Savings_hrs__c &gt; 0
&amp;&amp;
(
ISBLANK(Annual_Efficiencies_Savings_Confidence__c)
||
Annual_Efficiencies_Savings_Confidence__c = 0
)
)</errorConditionFormula>
    <errorMessage>You must enter a value greater than 0 for your confidence percentages</errorMessage>
</ValidationRule>