force-app/main/default/objects/AH_Project_Backlog_Workstreams__c/validationRules/Benefits_EnterCalculations_CRI.validationRule-meta.xml
<ValidationRule>
    <fullName>Benefits_EnterCalculations_CRI</fullName>
    <active>false</active>
    <description>NICC-053541

09/29/2021 - TEMPORARILY DISABLED BY STUART EMERY.  CAUSING ISSUES CREATING NEW INTERNAL PROJECTS</description>
    <errorConditionFormula>AND(
OR
(NOT(ISBLANK(Annual_Cost_Reduction_Confidence__c)),
NOT(ISBLANK(Estimated_Annual_Cost_Reduction__c))),
ISBLANK( CRI_How_did_you_arrive_at_this_number__c ))</errorConditionFormula>
    <errorDisplayField>CRI_How_did_you_arrive_at_this_number__c</errorDisplayField>
    <errorMessage>Please Enter Details</errorMessage>
</ValidationRule>