force-app/main/default/objects/AH_Project_Backlog_Workstreams__c/validationRules/Benefits_EnterCalculations_ESI.validationRule-meta.xml
<ValidationRule>
    <fullName>Benefits_EnterCalculations_ESI</fullName>
    <active>false</active>
    <description>NICC-053541

09/29/2021 - TEMPORARILY DISABLED BY STUART EMERY.  CAUSING ISSUES CREATING NEW INTERNAL PROJECTS</description>
    <errorConditionFormula>AND(
OR
(NOT(ISBLANK(Annual_Efficiencies_Savings_hrs__c )),
NOT(ISBLANK(Annual_Efficiencies_Savings_Confidence__c ))),
ISBLANK(ESI_How_did_you_arrive_at_this_number__c ))</errorConditionFormula>
    <errorDisplayField>ESI_How_did_you_arrive_at_this_number__c</errorDisplayField>
    <errorMessage>Please Enter Details</errorMessage>
</ValidationRule>