force-app/main/default/objects/AH_Project_Backlog_Workstreams__c/validationRules/Blank_Benefits.validationRule-meta.xml
<ValidationRule>
    <fullName>Blank_Benefits</fullName>
    <active>true</active>
    <description>NICC-047851

You must select at least one benefit and update the fields that are related to that benefit</description>
    <errorConditionFormula>ISBLANK(Annual_Cost_Reduction_Confidence__c)
&amp;&amp;
ISBLANK(Estimated_Annual_Cost_Reduction__c)
&amp;&amp;
ISBLANK(Annual_Efficiencies_Savings_hrs__c)
&amp;&amp;
ISBLANK(Annual_Efficiencies_Savings_Confidence__c)
&amp;&amp;
This_Project_Will_Increase_Efficiences__c = false
&amp;&amp;
This_Project_Will_Reduce_Costs__c = false</errorConditionFormula>
    <errorDisplayField>Annual_Cost_Reduction_Confidence__c</errorDisplayField>
    <errorMessage>You must select at least one benefit and update the fields that are related to that benefit</errorMessage>
</ValidationRule>